--- a/b/composer.json
+++ b/b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravelcollective/html": "^5.2"
+        "laravelcollective/html": "^5.2",
+        "lucadegasperi/oauth2-server-laravel": "5.1.*",
+        "ixudra/curl": "6.3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
