--- a/b/composer.json
+++ b/b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2",
         "lucadegasperi/oauth2-server-laravel": "5.1.*",
-        "ixudra/curl": "6.3.*"
+        "ixudra/curl": "6.3.*",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
